[package]
name = "sanctum-router-core"
version = "0.1.0"
edition = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
std = ["borsh/std", "serde?/std"]
wasm = ["std", "serde", "dep:tsify-next", "dep:wasm-bindgen"]

[dependencies]
borsh = { workspace = true, default-features = false, features = ["derive"] }
const-crypto = { workspace = true }
generic-array-struct = { workspace = true }
sanctum-fee-ratio = { workspace = true }
sanctum-marinade-liquid-staking-core = { workspace = true }
sanctum-reserve-core = { workspace = true }
sanctum-spl-stake-pool-core = { workspace = true }
sanctum-u64-ratio = { workspace = true }

# optional
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
tsify-next = { workspace = true, default-features = false, features = ["js"] , optional = true }
wasm-bindgen = { workspace = true, optional = true }
