[package]
name = "sanctum-router-jupiter-amm"
version = "0.1.0"
edition = { workspace = true }

[features]
default = []

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, default-features = false, features = ["derive"] }
const-crypto = { workspace = true }
generic-array-struct = { workspace = true }
sanctum-fee-ratio = { workspace = true }
sanctum-u64-ratio = { workspace = true }
sanctum-spl-stake-pool-core = { workspace = true }
sanctum-marinade-liquid-staking-core = { workspace = true }
sanctum-router-core = { workspace = true }

jupiter-amm-interface = { workspace = true }
solana-sdk = { workspace = true }
rust_decimal = { workspace = true }

# optional

[dev-dependencies]

