[package]
name = "sanctum-router" # npm package name without @sanctumso/ scope
version = "0.0.1-dev-1" # npm package version
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
bs58-fixed = { workspace = true }
bs58-fixed-wasm = { workspace = true, features = ["js"]}
ed25519-compact = { workspace = true }
hmac-sha256 = { workspace = true }
sanctum-router-core = { workspace = true , features = ["wasm"] }
serde = { workspace = true }
tsify-next = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }

sanctum-marinade-liquid-staking-core = { workspace = true }
sanctum-reserve-core = { workspace = true }
sanctum-spl-stake-pool-core = { workspace = true }
solido-legacy-core = { workspace = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }
